--- a/financas/front-end/src/app/modules/despesa/components/despesaCad/despesaCad.component.html
+++ b/financas/front-end/src/app/modules/despesa/components/despesaCad/despesaCad.component.html
@@ -29,7 +29,7 @@
                                     <mat-label>Tipo de pagamento</mat-label>
 
                                     <mat-select formControlName="tipoPagamento" (selectionChange)="carregarComboCartoesDisponiveis()">
-                                        <mat-option *ngFor="let item of listaTipoPagamentoFiltro" [value]="item.id">
+                                        <mat-option *ngFor="let item of listaTipoPagamentoFiltro" [value]="item.idTipoPagamentoVO">
                                             {{item.descricao}}
                                         </mat-option>
                                     </mat-select>
