Ajustando aba da lista de fonde de renda para a tela de cadastro de receita

--- a/financas/front-end/src/app/modules/receita/pages/receitaDet/receitaDet.page.html
+++ b/financas/front-end/src/app/modules/receita/pages/receitaDet/receitaDet.page.html
@@ -8,9 +8,9 @@
                         <receitaCadComponent></receitaCadComponent>
                     </ng-template>
                 </mat-tab>
-                  <mat-tab label="Cadastro de fonte de renda">
+                  <mat-tab label="Lista de fonte de renda">
                     <ng-template matTabContent>
-                     <fonteRendaCadComponent></fonteRendaCadComponent>                      
+                        <fonteRendaListaPage></fonteRendaListaPage>                      
                     </ng-template>
                     </mat-tab>  
 
