--- a/financas/front-end/src/app/app.component.html
+++ b/financas/front-end/src/app/app.component.html
@@ -26,7 +26,7 @@
           <span>Despesa</span>
         </button>
 
-        <button mat-menu-item [routerLink]="['/','receita','listaDet']">
+        <button mat-menu-item [routerLink]="['/','receita','lista']">
           <span>Receita</span>
         </button>
 
