--- a/financas/front-end/src/app/modules/receita/pages/receitaLista/receitaLista.page.html
+++ b/financas/front-end/src/app/modules/receita/pages/receitaLista/receitaLista.page.html
@@ -42,7 +42,7 @@
               (optionSelected)="aplicarFiltro()">
               <mat-option>&lt;&lt;Selecione&gt;&gt;</mat-option>
               <mat-option *ngFor="let item of fonteDeRendaFiltro" [value]="item">
-                {{item?.fonteDeRenda}}
+                {{item?.fonteRendaVO.descricao}}
               </mat-option>
             </mat-autocomplete>
             <span class="dropdown-icon">
