Ajustes nos combos de receita

--- a/financas/front-end/src/app/modules/receita/components/receitaCad/receitaCad.component.html
+++ b/financas/front-end/src/app/modules/receita/components/receitaCad/receitaCad.component.html
@@ -30,7 +30,7 @@
 
                                     <mat-select formControlName="fonteRenda">
                                         <mat-option *ngFor="let item of listaFonteRendaFiltro" [value]="item.id">
-                                            {{item.fonteRenda}}
+                                            {{item.descricao}}
                                         </mat-option>
                                     </mat-select>
 
