Preparando tela de balancetes

--- a/financas/front-end/src/app/app.component.html
+++ b/financas/front-end/src/app/app.component.html
@@ -46,11 +46,11 @@
 
         <mat-menu class="btn-menu" #BalanceteFinanceiro="matMenu">
 
-          <button mat-menu-item [routerLink]="['/','balenceteFinanceiro','lista', 'anual']">
+          <button mat-menu-item [routerLink]="['/','balanceteFinanceiro','lista']">
             <span>Balancete Anual</span>
           </button>
   
-          <button mat-menu-item [routerLink]="['/','balenceteFinanceiro','lista', 'mensal']">
+          <button mat-menu-item [routerLink]="['/','balanceteFinanceiro','lista']">
             <span>Balancete Mensal</span>
           </button>
 
