--- a/financas/front-end/src/app/modules/receita/components/dialogs/fonteRendaCad.dialog.html
+++ b/financas/front-end/src/app/modules/receita/components/dialogs/fonteRendaCad.dialog.html
@@ -5,6 +5,7 @@
                 <div class="container border  bg-white p-3">
 
                     <div class="container border rounded p-3 mb-3">
+                        <label class="floating-label-fonte-renda">Cadastro</label>
 
                         <div class="row">
                             <div class="col-12">
