Ajuste tela de pesquisa filtros

--- a/financas/front-end/src/app/app.component.html
+++ b/financas/front-end/src/app/app.component.html
@@ -46,11 +46,11 @@
 
         <mat-menu class="btn-menu" #BalanceteFinanceiro="matMenu">
 
-          <button mat-menu-item [routerLink]="['/','balanceteFinanceiro','lista']">
+          <button mat-menu-item [routerLink]="['/','balanceteFinanceiro', 'anual','BCOT','lista']">
             <span>Balancete Anual</span>
           </button>
   
-          <button mat-menu-item [routerLink]="['/','balanceteFinanceiro','lista']">
+          <button mat-menu-item [routerLink]="['/','balanceteFinanceiro','mensal','BCOT','lista']">
             <span>Balancete Mensal</span>
           </button>
 
