--- a/financas/front-end/src/app/modules/balanceteFinanceiro/pages/balanceteFinanceiroLista/balanceteFinanceiroLista.page.html
+++ b/financas/front-end/src/app/modules/balanceteFinanceiro/pages/balanceteFinanceiroLista/balanceteFinanceiroLista.page.html
@@ -22,7 +22,7 @@
                 <mat-label> Período inicial</mat-label>
                 <input formControlName="periodoInicial" type="text" matInput [matAutocomplete]="autoResp2">
                 <mat-autocomplete autoActiveFirstOption #autoResp2="matAutocomplete" [displayWith]="obterPeriodoInicial"
-                  (optionSelected)="aplicarFiltro()">
+                  >
                   <mat-option>&lt;&lt;Selecione&gt;&gt;</mat-option>
                   <mat-option *ngFor="let item of periodoInicialFiltro" [value]="item">
                     {{item?.periodoInicial}}
@@ -39,9 +39,9 @@
             <div class="col-5 processo">
                 <mat-form-field class="custom-select">
                   <mat-label> Período final</mat-label>
-                  <input formControlName="periodoFinal" type="text" matInput [matAutocomplete]="autoResp2">
-                  <mat-autocomplete autoActiveFirstOption #autoResp2="matAutocomplete" [displayWith]="obterPeriodoFinal"
-                    (optionSelected)="aplicarFiltro()">
+                  <input formControlName="periodoFinal" type="text" matInput [matAutocomplete]="autoResp3">
+                  <mat-autocomplete autoActiveFirstOption #autoResp3="matAutocomplete" [displayWith]="obterPeriodoFinal"
+                    >
                     <mat-option>&lt;&lt;Selecione&gt;&gt;</mat-option>
                     <mat-option *ngFor="let item of periodoFinalFiltro" [value]="item">
                       {{item?.periodoFinal}}
@@ -56,7 +56,7 @@
               </div>
 
               <div class="col-md-2 processo">
-                <button mat-fab extended color="primary">
+                <button mat-fab extended color="primary" (click)="aplicarFiltro()">
                     <mat-icon>filter_alt</mat-icon>
                     Filtrar
                 </button>
