Criando consulta calculo balancete

--- a/financas/front-end/src/app/modules/balanceteFinanceiro/components/balanceteFinanceiroCad/balanceteFinanceiroCad.component.html
+++ b/financas/front-end/src/app/modules/balanceteFinanceiro/components/balanceteFinanceiroCad/balanceteFinanceiroCad.component.html
@@ -51,7 +51,7 @@
             </div>
 
             <div class="col-4">
-              <button mat-fab extended color="primary">
+              <button mat-fab extended color="primary" (click)="calcularBalancete()">
                 <mat-icon>calculate</mat-icon>
                 Calcular Balancete
               </button>
